# tetrisanalyzer

./: .gitignore  README.md  epl-v10.html  pom.xml  readme.txt
blog/03/src/main/java/tetrisanalyzer/: Board.java  Move.java  Moves.java  Square.java  ValidMovesCalculator.java
blog/03/src/test/java/tetrisanalyzer/: BoardTest.java  ValidMovesCalculatorTest.java
clojure/: README.md  project.clj
clojure/src/tetrisanalyzer/: board.clj  file.clj  piece.clj  position.clj
clojure/test/tetrisanalyzer/: board_test.clj  piece_test.clj  position_test.clj
doc/: todo.txt
langs/clojure/doc/: intro.md
langs/clojure/src/tetrisanalyzer/: board.clj  file.clj  piece.clj  repl.clj
langs/clojure/test/tetrisanalyzer/: board_test.clj  piece_test.clj
langs/clojure/tetris-polylith/: deps.edn  readme.md  workspace.edn
langs/clojure/tetris-polylith/development/src/dev/: jocke.clj
langs/clojure/unoptimized/: project.clj
langs/clojure/unoptimized/src/tetrisanalyzer/: core.clj
langs/clojure/unoptimized/test/tetrisanalyzer/: board_test.clj  core_test.clj
langs/cpp/: .gitignore  Board.cpp  CMakeLists.txt  Constants.h  DiffMoveThList.cpp  DiffMoveThList.h  Game.h  GameObserverList.cpp  GameView.cpp  MoveList.cpp  MoveList.h  MovePathStep.cpp  Platform.h  Player.cpp  README.md  Render.cpp  RenderText.cpp  RenderText.h  StdAfx.h  TetrisApp.cpp  TetrisApp.dsp  TetrisApp.h
langs/cpp/doc/: readme.txt
langs/cpp/legacy/: TetrisApp.dsw
langs/cpp/src/: Board.h  FileWriter.h  Game.cpp  Game.h  GameObserverList.h  GameSettings.cpp  GameView.cpp  GameView.h  Move.cpp  Render.h  RenderText.cpp  RenderText.h  Thread.h  resource.h
langs/java/: README.md  build.sh  run.sh
langs/java/example/: five-games-parameter-areaWidthFactor1.yaml  system.yaml
langs/python/: .gitignore  README.md  pyproject.toml  tetris.py
langs/python/tetris-polylith-uv/: .gitignore  README.md  main.py  pyproject.toml  workspace.toml
langs/python/tetris-polylith-uv/components/tetrisanalyzer/board/: __init__.py  clear_rows.py  core.py  grid.py
langs/python/tetris-polylith-uv/components/tetrisanalyzer/move/: __init__.py  move.py  placement.py
langs/python/tetris-polylith-uv/components/tetrisanalyzer/piece/: __init__.py  bitmask.py  core.py  placement.py  set_piece.py  shape.py  visit.py
langs/python/tetris-polylith-uv/components/tetrisanalyzer/piece/move/: __init__.py  move.py  placement.py
langs/python/tetris-polylith-uv/components/tetrisanalyzer/piece/placement/: __init__.py  placement.py
langs/python/tetris-polylith-uv/components/tetrisanalyzer/piece/settings/: __init__.py  atari_arcade.py  game_boy.py  nintendo_nes.py
langs/python/tetris-polylith-uv/test/components/tetrisanalyzer/board/: test_clear_rows.py  test_core.py  test_grid.py
langs/python/tetris-polylith-uv/test/components/tetrisanalyzer/move/: test_move.py  test_placement.py  test_visit.py
langs/python/tetris-polylith-uv/test/components/tetrisanalyzer/piece/: test_core.py  test_move.py  test_set_piece.py  test_shape.py  test_visit.py
langs/python/tetris-polylith-uv/test/components/tetrisanalyzer/piece/move/: test_move.py  test_placement.py  test_visit.py
langs/python/tetris-polylith-uv/test/components/tetrisanalyzer/piece/placement/: test_move.py  test_placement.py  test_visit.py
langs/scala/: build.sbt  build.sh  run.sh
langs/scala/doc/: todo.txt
langs/scala/project/: plugins.sbt
otherlang/src/main/cpp/: Brain.h  DiffMoveTh.h  DiffMoveThList.h  GameObserverList.cpp  GameView.h  Piece.h  Player.h  Random.cpp  RenderText.h  TetrisApp.cpp  TetrisApp.plg  TetrisApp.rc
otherlang/src/main/java/com/github/tetrisanalyzer/: Timer.java
project/: build.properties
src/main/cpp/: Board.cpp  BrainJote20.cpp  BrainJote20.h  DiffMove.cpp  DiffMove.h  DiffMoveGroup.cpp  DiffMoveGroup.h  DiffMoveTh.cpp  DiffMoveThList.cpp  FileReader.cpp  FileReader.h  FileWriter.cpp  Game.cpp  GameInfo.cpp  GameInfo.h  GameObserver.h  GameObserverList.h  GameSettings.cpp  GameSettings.h  GameView.cpp  Move.h  MoveList.h  MovePath.cpp  MovePath.h  MovePathStep.h  Piece.cpp  PieceGenerator.h  PieceGeneratorRandom.cpp  PieceGeneratorRandom.h  Player.cpp  Random.h  Render.cpp  RenderText.cpp  Runnable.h  StdAfx.cpp  TetrisApp.aps  TetrisApp.dsp  TetrisApp.opt  Thread.cpp  Thread.h
src/main/cpp/doc/: ReadMe_AppWizard.txt
src/main/java/com/github/tetrisanalyzer/board/: Board.java  BoardOutline.java
src/main/java/com/github/tetrisanalyzer/boardevaluator/: BoardEvaluator.java  TengstrandBoardEvaluator1.java
src/main/java/com/github/tetrisanalyzer/game/: Game.java
src/main/java/com/github/tetrisanalyzer/move/: EvaluatedMoves.java  Move.java  MoveEquity.java  ValidMoves.java
src/main/java/com/github/tetrisanalyzer/piece/: Piece.java  PieceAny.java  PieceEmpty.java  PieceJ.java  PieceL.java  PieceO.java  PieceS.java  PieceShape.java  PieceT.java  Point.java
src/main/java/com/github/tetrisanalyzer/piecegenerator/: DefaultPieceGenerator.java  JavaPieceGenerator.java  PredictablePieceGenerator.java
src/main/java/com/github/tetrisanalyzer/piecemove/: AllValidPieceMovesForEmptyBoard.java  Direction.java  Movement.java  PieceMove.java  ValidPieceMovesForEmptyBoard.java  VisitedPieceMoves.java
src/main/java/com/github/tetrisanalyzer/settings/: DefaultGameSettings.java  GameSettings.java  GameSettingsSlidingOn.java
src/main/scala/com/github/tetrisanalyzer/: Profiling.scala  Stopwatch.scala  Timer.scala
src/main/scala/com/github/tetrisanalyzer/board/: Board.scala  BoardOutline.scala
src/main/scala/com/github/tetrisanalyzer/boardevaluator/: BoardEvaluator.scala  JTengstrandBoardEvaluator1.scala  TengstrandBoardEvaluator1.scala
src/main/scala/com/github/tetrisanalyzer/game/: ComputerPlayer.scala  Game.scala  GameEventDelegate.scala  GameEventDelegator.scala  GameEventReceiver.scala  GameInfoReceiver.scala  PlayerEventReceiver.scala  Position.scala  PositionModel.scala  Timer.scala
src/main/scala/nu/tengstrand/tetrisanalyzer/: Profiling.scala  Stopwatch.scala
src/test/scala/com/github/tetrisanalyzer/: BaseTest.scala
website/: index.html
(+527 files in other folders)
