[tool.poetry]
name = "tetris-analyzer"
version = "0.1.0"
description = "A Tetris playing AI"
authors = ["Joakim Tengstrand <joakimtengstrand@gmail.com>"]
license = "EPL-1.0"
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = ">=3.8"
pygame = ">=2.5.0"

[tool.poetry.scripts]
tetris = "tetris:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
