[project]
name = "tetris-polylith-uv"
version = "0.1.0"
description = "A tetris playing AI in Python using the Polylith architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "polylith-cli>=1.40.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.7",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.uv.workspace]
members = ["projects/*"]

[tool.ruff]
lint.ignore = ["E741"]  # Ambiguous variable name (the "I" and "O" variables)

[tool.polylith.bricks]
"components/tetrisanalyzer/board" = "tetrisanalyzer/board"
"components/tetrisanalyzer/piece" = "tetrisanalyzer/piece"
